WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306165
[JSC] Fix m_numberOfActiveVMs underflow in VMManager due to flag-counter desync
https://bugs.webkit.org/show_bug.cgi?id=306165
Summary
[JSC] Fix m_numberOfActiveVMs underflow in VMManager due to flag-counter desync
Yijia Huang
Reported
2026-01-23 19:11:25 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-01-23 19:11:30 PST
<
rdar://problem/168804514
>
Yijia Huang
Comment 2
2026-01-23 19:15:49 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57162
EWS
Comment 3
2026-01-25 12:11:40 PST
Committed
306172@main
(4cee9db51dca): <
https://commits.webkit.org/306172@main
> Reviewed commits have been landed. Closing PR #57162 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug